<resources>
    <string name="app_name">My Journey</string>

    //months
    <string name="January">Yanvar</string>
    <string name="February">Fevral</string>
    <string name="March">Mart</string>
    <string name="April">Aprel</string>
    <string name="May">May</string>
    <string name="June">Iyun</string>
    <string name="July">Iyul</string>
    <string name="August">Avgust</string>
    <string name="September">Sentabr</string>
    <string name="Oktober">oktabr</string>
    <string name="November">Noyabr</string>
    <string name="December">Dekabr</string>
    <string name="WrongMonth">Nothing</string>

    //numbers
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="text_four">4</string>
    <string name="text_five">5</string>
    <string name="text_six">6</string>
    <string name="text_seven">7</string>
    <string name="text_eight">8</string>
    <string name="text_nine">9</string>
    <string name="text_zero">0</string>
    <string name="text_home">home</string>
    <string name="text_journey">Journey</string>
    <string name="text_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_description">Add Floating Action Button</string>
    <string name="image_item">Image</string>
    <string name="text_add">add</string>
    <string name="text_camp">Oromgohlar</string>
    <string name="text_historical_building">Tarixiy obidalar</string>
    <string name="text_select_bottoms"> dan qidirayptgan joyingizni turini tanlang</string>
    <string name="text_all">Hammasi</string>
    <string name="text_close">Yopish</string>
    <string name="text_help">Yordam</string>
    <string name="text_language">Dastur tili</string>
    <string name="text_about">Dastur haqida</string>
    <string name="text_log_out">Chiqish</string>
    <string name="text_sevice">Service</string>
    <string name="text_ft">Forevel Travel</string>
    <string name="text_notification">Eslatmalar</string>
    <string name="text_search">Qidiruv</string>
    <string name="text_title_near_rivers">Daryo bo`ylari</string>
    <string name="text_title_landscape">Manzarali joylar</string>
    <string name="text_title_near_mountain">Tog` oldi maskanlar</string>
    <string name="text_title_shrine">Ziyorotgohlar</string>
    <string name="text_title_reserve">Qo`riqxonalar</string>
    <string name="text_empty"> </string>
    <string name="image_description">Image Description</string>


    //regions
    <string name="text_andijon">Andijon</string>
    <string name="text_fergana">Farg`ona</string>
    <string name="text_namangan">Namngan</string>
    <string name="text_tashkent">Toshken</string>
    <string name="text_jizzakh">Jizzax</string>
    <string name="text_sirdaryo">Sirdaryo</string>
    <string name="text_samarkand">Samarqand</string>
    <string name="text_qashqadaro">Qashqadaryo</string>
    <string name="text_surkhandaryo">Surxondaryo</string>
    <string name="text_navoi">Navoi</string>
    <string name="text_bukhara">Buxoro</string>
    <string name="text_khorazm">Xorazm</string>
    <string name="text_qoraqalpoq">Qoraqalpog`iston</string>
    <string name="text_uzbekistan">O`zbekiston</string>

    <string name="text_andijon_description">andijon</string>
    <string name="text_fergana_description">farg`ona</string>
    <string name="text_namangan_description">namngan</string>
    <string name="text_tashkent_description">toshken</string>
    <string name="text_jizzakh_description">jizzax</string>
    <string name="text_sirdaryo_description">sirdaryo</string>
    <string name="text_samarkand_description">samarqand</string>
    <string name="text_qashqadaro_description">qashqadaryo</string>
    <string name="text_surkhandaryo_description">surxondaryo</string>
    <string name="text_navoi_description">navoi</string>
    <string name="text_bukhara_description">buxoro</string>
    <string name="text_khorazm_description">xorazm</string>
    <string name="text_qorqalpoq_description">qoraqalpog`iston</string>
    <string name="text_uzbekistan_description">o`zbekiston</string>



    <string name="text_service">Service</string>
    <string name="text_uzbek">O`zbek</string>
    <string name="text_english">English</string>
    <string name="text_russion">Русский</string>
    <string name="text_registon">Registon</string>
    <string name="text_registon_description">Registon</string>
    <string name="text_connect_device">Qurilmani bog`lash</string>
    <string name="text_bluetooth">Bluetooth</string>

</resources>