<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:ellipsize="end"
        android:textAlignment="center"
        android:text="@string/text_select_bottoms"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/button_background"
        android:text="@string/text_camp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_historical"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/button_background"
        android:text="@string/text_historical_building"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_all"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/button_background"
        android:text="@string/text_all"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/button_background_outline"
        android:text="@string/text_close"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />
</LinearLayout>